<resources>
    <string name="app_name">MyH2O</string>
    <string name="part1">Basic Information</string>
    <string name="field_location">Sampling Location</string>
    <string name="field_date">Sampling Date</string>
    <string name="field_date2">Measuring Date</string>
    <string name="part2">Sampling Descriptions</string>
    <string name="field_smell">Smell</string>
    <string name="field_gross">Gross Things</string>
    <string name="part3">Sampling Indexes Measurement</string>
    <string name="unit">Unit: mg/L</string>
    <string name="field_no3">nitrate</string>
    <string name="warn4nitrate">Please input values between 0 and 200</string>
    <string name="field_cod">COD</string>
    <string name="warn4cod">Please input integers between 0 and 50</string>
    <string name="field_Fe">Fe</string>
    <string name="warn4fe">Please input values between 0 and 5</string>
    <string name="field_As">As</string>
    <string name="warn4as">Please input values between 0 and 1</string>
    <string name="field_AN">Ammonia nitrogen</string>
    <string name="warn4an">Please input values between 0 and 5</string>
    <string name="field_TDS">TDS</string>
    <string name="warn4tds">Please input integers between 0 and 15000</string>
    <string name="field_pH">pH</string>
    <string name="warn4ph">Please input values between 0 and 10</string>
    <string name="field_coli">Bacterium coli</string>
    <string name="unit4coli">Unit：CFU/100ml</string>
    <string name="warn4coli">Please input integers between 0 and 10000</string>
    <string name="field_notes">Description and notes</string>
    <string name="describe4img">Upload related pictures</string>
    <string name="action_upload">Confirm uploading</string>
    <string name="warn4blank">Please input information!</string>
    <string name="title_activity_maps">Map</string>
    <string name="map_ac">MyH2O</string>
    <string name="upload_ac">MyH2O</string>
    <string name="comment_ac">MyH2O</string>
    <string name="user_info">MyH2O</string>
    <string name="loc_hint">Click to locate with a map</string>
    <string name="featurelyrUrl">https://services2.arcgis.com/SMhD6W2pab892cSJ/arcgis/rest/services/test_data_for_app/FeatureServer/0</string>
    <string name="sample_service_url">http://sampleserver6.arcgisonline.com/arcgis/rest/services/DamageAssessment/FeatureServer/0</string>
</resources>
