<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        tools:context="com.whu.myh2o.MainActivity">
        <!--基本信息部分-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:gravity="center"
            android:text="@string/part1"
            android:textSize="@dimen/catalog_size"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loc_hint"
            android:textSize="@dimen/hint_size"
            app:met_baseColor="@color/colorPrimaryDark"
            app:met_textColor="@color/colorText"
            android:inputType="text"
            android:clickable="true"
            app:met_helperText="（经度，纬度），单位为°（度）"
            app:met_helperTextAlwaysShown="true"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/field_location" />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_baseColor="@color/colorPrimaryDark"
            app:met_textColor="@color/colorText"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:clickable="true"
            android:inputType="date"
            android:hint="@string/field_date"
            android:textSize="@dimen/hint_size"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/field_date"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_date2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_baseColor="@color/colorPrimaryDark"
            app:met_textColor="@color/colorText"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:clickable="true"
            android:inputType="date"
            android:hint="@string/field_date2"
            android:textSize="@dimen/hint_size"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/field_date2"/>
        <!--水样描述部分-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:gravity="center"
            android:text="@string/part2"
            android:textSize="@dimen/catalog_size"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_smell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_baseColor="@color/colorPrimaryDark"
            app:met_textColor="@color/colorText"
            android:inputType="text"
            android:hint="@string/field_smell"
            android:textSize="@dimen/hint_size"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/field_smell"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_gross"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_baseColor="@color/colorPrimaryDark"
            app:met_textColor="@color/colorText"
            android:inputType="text"
            android:hint="@string/field_gross"
            android:textSize="@dimen/hint_size"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/field_gross"/>
        <!--数据检测部分-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:gravity="center"
            android:text="@string/part3"
            android:textSize="@dimen/catalog_size"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_no3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_baseColor="@color/colorPrimaryDark"
            app:met_textColor="@color/colorText"
            android:inputType="numberDecimal"
            android:hint="@string/field_no3"
            android:textSize="@dimen/hint_size"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/field_no3"
            app:met_helperText="@string/unit"
            app:met_helperTextAlwaysShown="true"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_cod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            app:met_baseColor="@color/colorPrimaryDark"
            app:met_textColor="@color/colorText"
            android:inputType="number"
            android:hint="@string/field_cod"
            android:textSize="@dimen/hint_size"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/field_cod"
            app:met_helperText="@string/unit"
            app:met_helperTextAlwaysShown="true"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_fe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            app:met_baseColor="@color/colorPrimaryDark"
            app:met_textColor="@color/colorText"
            android:inputType="numberDecimal"
            android:hint="@string/field_Fe"
            android:textSize="@dimen/hint_size"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/field_Fe"
            app:met_helperText="@string/unit"
            app:met_helperTextAlwaysShown="true"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_as"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            app:met_baseColor="@color/colorPrimaryDark"
            app:met_textColor="@color/colorText"
            android:inputType="numberDecimal"
            android:hint="@string/field_As"
            android:textSize="@dimen/hint_size"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/field_As"
            app:met_helperText="@string/unit"
            app:met_helperTextAlwaysShown="true"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_AN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            app:met_baseColor="@color/colorPrimaryDark"
            app:met_textColor="@color/colorText"
            android:inputType="numberDecimal"
            android:hint="@string/field_AN"
            android:textSize="@dimen/hint_size"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/field_AN"
            app:met_helperText="@string/unit"
            app:met_helperTextAlwaysShown="true"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_tds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            app:met_baseColor="@color/colorPrimaryDark"
            app:met_textColor="@color/colorText"
            android:inputType="number"
            android:hint="@string/field_TDS"
            android:textSize="@dimen/hint_size"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/field_TDS"
            app:met_helperText="@string/unit"
            app:met_helperTextAlwaysShown="true"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_ph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            app:met_baseColor="@color/colorPrimaryDark"
            app:met_textColor="@color/colorText"
            android:inputType="numberDecimal"
            android:hint="@string/field_pH"
            android:textSize="@dimen/hint_size"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/field_pH"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_coli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            app:met_baseColor="@color/colorPrimaryDark"
            app:met_textColor="@color/colorText"
            android:inputType="number"
            android:hint="@string/field_coli"
            android:textSize="@dimen/hint_size"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="@string/field_coli"
            app:met_helperText="@string/unit4coli"
            app:met_helperTextAlwaysShown="true" />
        <!--备注-->
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:hint="@string/field_notes"
            android:textSize="@dimen/hint_size"
            app:met_baseColor="@color/colorPrimaryDark"
            app:met_textColor="@color/colorText"
            android:inputType="textMultiLine"
            app:met_hideUnderline="true"
            app:met_floatingLabel="highlight"
            android:scrollbars="vertical"
            android:gravity="top"
            android:lines="3"/>
        <!--上传照片-->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="116dp"
            android:paddingBottom="16dp">
            <Button
                android:id="@+id/buttionLoadPics"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="16dp"
                android:drawableTop = "@drawable/ic_insert_photo_white_48dp"
                android:drawablePadding="-6dp"
                android:text="@string/describe4img"
                android:textColor="@color/colorWhite"
                android:clickable="true" />
            <ImageView
                android:id="@+id/imgView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:contentDescription="@string/describe4img">
            </ImageView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
