<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    tools:context="com.whu.myh2o.CommentFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        tools:context="org.myh2o.samplingapp.MainActivity">
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/cmt_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/field_location"
        android:textSize="@dimen/hint_size"
        app:met_baseColor="@color/colorPrimaryDark"
        app:met_textColor="@color/colorText"
        android:inputType="text"
        android:clickable="true"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/field_location" />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/cmt_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:met_baseColor="@color/colorPrimaryDark"
        app:met_textColor="@color/colorText"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:clickable="true"
        android:inputType="date"
        android:hint="@string/field_date"
        android:textSize="@dimen/hint_size"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelText="@string/field_date"/>
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/cmt_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:hint="@string/field_notes"
        android:textSize="@dimen/hint_size"
        app:met_baseColor="@color/colorPrimaryDark"
        app:met_textColor="@color/colorText"
        android:inputType="textMultiLine"
        app:met_hideUnderline="true"
        app:met_floatingLabel="highlight"
        android:scrollbars="vertical"
        android:gravity="top"
        android:lines="3"/>
    <!--上传照片-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="116dp"
        android:paddingBottom="16dp">
        <Button
            android:id="@+id/cmt_btn_loadpic"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="16dp"
            android:drawableTop = "@drawable/ic_insert_photo_white_48dp"
            android:drawablePadding="-6dp"
            android:text="@string/describe4img"
            android:textColor="@color/colorWhite"
            android:clickable="true" />
        <ImageView
            android:id="@+id/cmt_imgView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:contentDescription="@string/describe4img">
        </ImageView>
    </LinearLayout>
    </LinearLayout>
</FrameLayout>
